--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
 		<nav class="navbar">
 			<div class="container nav-container">
 				<div class="logo">
-					<img src="logo.png" alt="美乐锦科技Logo" />
+					<img src="Logo.png" alt="美乐锦科技Logo" />
 					<div class="logo-text" data-lang="zh">江苏美乐锦科技</div>
 					<div class="logo-text" data-lang="en" style="display: none">
 						Jiangsu Meilejin Tech
@@ -1642,7 +1642,7 @@
 				<div class="footer-top">
 					<div class="footer-col">
 						<div class="footer-logo">
-							<img src="logo.png" alt="美乐锦科技Logo" />
+							<img src="Logo.png" alt="美乐锦科技Logo" />
 							<div class="footer-logo-text" data-lang="zh">江苏美乐锦科技</div>
 							<div
 								class="footer-logo-text"
@@ -2001,3 +2001,4 @@
 		</script>
 	</body>
 </html>
+
